--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   padding: 2rem;
   text-align: center;
 }
+body{
+  width: 100vw !important;
+  overflow-x: hidden  !important;
+}
 
 .logo {
   height: 6em;
